# bangen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release-binaries.yml
bangen/: __init__.py  __main__.py  app.py
bangen/ai/: __init__.py  suggester.py
bangen/cli/: parser.py  runner.py  screensaver.py
bangen/effects/: __init__.py  base.py  distortion.py  glitch.py  motion.py  pulse.py  scroll.py  signature.py  temporal.py  typewriter.py  utils.py  visual.py  wave.py
bangen/export/: __init__.py  exporter.py  gif.py  png.py  txt.py
bangen/gradients/: __init__.py  gradient.py
bangen/presets/: __init__.py  manager.py
bangen/rendering/: __init__.py  banner.py  engine.py  sizing.py
bangen/tui/: __init__.py  app.py  export_dialog.py  preset_dialog.py
