[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangen"
version = "2.0.0"
description = "Premium ASCII banner rendering engine with gradients, effects, live TUI, and multi-format export."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "pro-grammer-SD" }]
keywords = ["ascii", "banner", "terminal", "pyfiglet", "rich"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Topic :: Terminals",
]
dependencies = [
  "pyfiglet>=1.0",
  "rich>=13.0",
]

[project.optional-dependencies]
images = ["Pillow>=10.0"]
all = ["Pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/pro-grammer-SD/bangen"
Repository = "https://github.com/pro-grammer-SD/bangen"
Issues = "https://github.com/pro-grammer-SD/bangen/issues"

[project.scripts]
bangen = "bangen.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bangen*"]

[tool.setuptools]
py-modules = ["main"]
